fixed spacing on images

--- a/css/main.css
+++ b/css/main.css
@@ -211,22 +211,6 @@ label.nav-label::before{
   text-align: center;
 }
 
-.img-portfolio {
-  opacity: 1;
-  display: block;
-  width: 100%;
-  height: auto;
-  transition: .5s ease;
-}
-
-.portfolio-content {
-  position: absolute;
-  top: 38%;
-  width: 100%;
-  color: #000;
-  font-size: 200%;
-}
-
 .portfolio-bg {
   background-color: #ccc;
 }
@@ -242,7 +226,7 @@ label.nav-label::before{
 
 .slide-img img {
   width: 100%;
-  height: 100%;
+  transform: scale(1.05);
 }
 
 .pre, .nxt {
